# agricas

./: .gitignore  LICENSE  README.md  agricas.py  requirements.txt  setup.cfg  setup.py
src/agricas/: __init__.py  agricas.py
