[metadata]
name = agricas
version = 0.1.0
author = Pierre Gerhard
author_email = pierre.gerhard@gmail.com
license = MIT
license_file = LICENSE
description = Web scraper for the URL http://www.agricas.fr/menu-au-ria.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p-gerhard/agricas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests==2.22.0
    beautifulsoup4==4.11.1
    lxml==4.8.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agricas = agricas.agricas:main
